# pygor

./: .gitattributes  .gitignore  .gitingore  CLAUDE.md  Clustering_DBSCAN.ipynb  Clustering_analysis-DESKTOP-16S590J.ipynb  Clustering_analysis.ipynb  Clustering_kmeans.ipynb  LICENSE  MANIFEST.in  OS_hdf5Export_custom.ipf  README.md  ROI_clustering.ipynb  ROI_clustering_multiplane.ipynb  ROI_clustering_multiplane_SC.ipynb  STRF_unit_test.py  _CLAUDE.md  averages_analysis.py  classical_analysis.ipynb  clustering.py  clustering_pooling.ipynb  code_usage.md  contouring.py  data_helpers.py  data_objects.py  data_objects_beta.py  data_test0.npy  dataclass_test.py  demo_strf.npy  edge_case_doublepol.npy  filehandling-DESKTOP-416TCTN.py  filehandling.py  filehandling_copyDec03.py  fileprep.ipynb  gif.tif  helpinfo.py  multi_stimulus_mapping.ipynb  plotting.ipynb  plotting.py  plotting_outdated.py  (+11 more)
Notebooks/: Experiment_demo.ipynb  RF_analysis.ipynb  clustering_testing.ipynb  contouring_improvement.ipynb  demo_notebook.ipynb  refactor_testing.ipynb
Outdated/: STRF_analysis_demo.ipynb  _islands.py  _legacy_filehandling.py  descriptives.py  df_scripts.py  legacy_dump.py  strf_obj_bckup.py  unfinished.py
Unknown/: basic_functions.py  df_scripts.py
docs/: configuration.md  index.md  purpose.md  strfs.md
docs/modules/: preprocessing.md
examples/: custom_config_example.py  example_notebook.ipynb  example_simple.py  preprocessing_data.py  register_scanA_to_scanB.py  strf_demo_data.h5
src/: test_out.txt
src/examples/: example_notebook.ipynb
src/pygor/: __init__.py  analyses.py  averages.py  config.py  data_helpers.py  defaults.toml  experiment.py  filehandling.py  load.py  np_ext.py  params.py  space.py  temporal.py  utilities.py
src/pygor/analyse/: strf.py
src/pygor/analyses/: strf_df.py
src/pygor/classes/: __init__.py  centre_surround.py  centre_surround_data.py  core_data-DESKTOP-16S590J.py  core_data.py  experiment.py  full_field.py  full_field_data.py  import_OS_params_test.ipynb  mixed_objects_data.py  moving_bars.py  moving_bars_data.py  osds_data.py  response_mapping_data.py  static_bars_data.py  strf.py  strf_data.py
src/pygor/clustering/: clustering.py  clustering_funcs.py  run_clustering.py
src/pygor/configs/: example.toml
src/pygor/core/: __init__.py  calculations.py  gui_template.py  methods.py  plot.py  trace_extraction.py
src/pygor/data_objs/: data_parent.py  strf.py
src/pygor/dev/: OS_STRFs_beta_experimental.ipf  align_rois_two_experiments.py  analyze_segmentation_quality.py  bars.ipynb  bars_simple.ipynb  calculate_multicolour_optimized.py  cellpose_infer_simple.py  cellpose_train_simple.py  cellpose_training.py  compare_detrend_params.py  compare_igor_vs_scanm.py  configs_and_settings.md  gui_notes_and_plans.md  issues.txt  mixed_objects.ipynb  parameter_playground.py  preprocessing_plan.md  registration_testing_simple.py  repr.ipynb  resgitration_testing.py  resgitration_testing_simple.py  scalings.ipynb  scalings.py  segmentation_trials.py  segmentation_trials_blobs.py  shift_method_comparison.py  strf_calc.ipynb  strf_fixes.md  strf_full_run.py  strf_igor_v_pygor_validation.py  strf_loop_vs_fft_validation.py  strf_mulitcolour_validation.py  tandem_workflow.md  test_final_model.py  test_registration.py  test_trained_model.py  test_workflow.py  trial_segmentation.py
src/pygor/examples/: .python-version  example_notebook.ipynb  pyproject.toml
src/pygor/filehandling/: manageh5.py
src/pygor/plotting/: __init__.py  basic.py  custom.py  custom_colormaps.py  movies.py  plots.py  scalebar.py  strf.py  util.py
src/pygor/preproc/: __init__.py  registration.py  scanm.py  triggers.py
src/pygor/roi_select/: __init__.py  napari_roi.py
src/pygor/segmentation/: __init__.py  base.py  core.py  functions.py  masks.py  plotting.py  preprocessing.py
src/pygor/shared/: averages.py
src/pygor/steps/: contouring.py  signal_analysis.py
src/pygor/strf/: __init__.py  analyse.py  bootstrap.py  calculate.py  calculate_multicolor_optimized.py  calculate_multicolour_optimized.py  calculate_optimized.py  calculate_strf.py  clustering_beta.py  contouring.py  contouring_beta.py  (+16 more)
test/: STRF_unit_test.py  test_Core.py  test_anlyses_import.py
unittests/: Core_test.py  Import_test.py  STRF_unit_test.py
(+70 files in other folders)
