[project]
name = "pygor"
version = "0.0.2"
authors = [
    { name="Simen Bruøygard", email="simen.bruoy@gmail.com" },
]
description = """A package for interacting with Igor Pro, 
for internal use, for Baden-lab members
"""
readme = "README.md"
requires-python = ">=3.12"
# Uncomment classifiers if needed
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

dependencies = [
    "numpy > 2",
    "matplotlib",
    "h5py",
    "pandas > 2.2.0",
    "seaborn",
    "scikit-learn",
    "scikit-image",
    "scipy",
    "dacite",
    "tifffile",
    "natsort",
    "tqdm",
    "ipywidgets",
    "ipykernel>=6.29.5",
    "statannotations>=0.4.4",
    # "pygor" should not be self-referenced here
    "pywavelets>=1.7.0",
    "napari[all]>=0.5.6",
]

[project.urls]
Homepage = "https://github.com/simbru/pygor"
Issues = "https://github.com/simbru/pygor/issues"

[tool.uv]
package = true
dev-dependencies = [
    "uv>=0.4.24",
]
constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

[tool.uv.sources]
statannotations = { git = "https://github.com/getzze/statannotations/", branch = "compat-seaborn-13" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
