[project]
name = "pygor"
version = "1.0"
authors = [
    { name="Simen Bruøygard", email="simen.bruoygard@pm.me" },
]
description = """A package for interacting with Igor Pro, 
for internal use, for Baden-lab members
"""
readme = "README.md"
requires-python = ">=3.12"
# Uncomment classifiers if needed
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

dependencies = [
    "numpy>=2.1",
    "matplotlib",
    "h5py",
    "pandas > 2.2.0",
    "seaborn",
    "scikit-learn",
    "scikit-image>=0.25",
    "scipy",
    "dacite",
    "tifffile",
    "natsort",
    "tqdm",
    "statannotations>=0.4.4",
]

[project.optional-dependencies]
gui = [
    "napari>=0.5.6",
    "pyqt5>=5.15.11",
]
cellpose = [
    "cellpose[gui]>=4.0.8",
]
notebook = [
    "ipywidgets",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/simbru/pygor"
Issues = "https://github.com/simbru/pygor/issues"

[tool.uv]
package = true
dev-dependencies = [
    "uv>=0.4.24",
    "ruff>=0.8.0",
    "igor2>=0.5.12",
]

constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

[tool.uv.sources]
# statannotations = { git = "https://github.com/getzze/statannotations/", branch = "compat-seaborn-13" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
